@@ -127,7 +127,7 @@ public:
 
   /// The Service_Object entry points.
   //@{
-  virtual int init (int argc, char* argv[]);
+  virtual int init (int argc, ACE_TCHAR* argv[]);
   virtual int fini (void);
   //@}
 
