@@ -1,3 +1,8 @@
+Fri Sep 23 11:09:12 UTC 2005  Johnny Willemsen  <jwillemsen@remedy.nl>
+
+        * orbsvcs/orbsvcs/Event/ECG_Mcast_Gateway.{h,cpp}:
+          Some wchar fixes
+
 Fri Sep 23 10:05:12 UTC 2005  Martin Corino  <mcorino@remedy.nl>
 
         * tests/CallbackTest/Callback.cpp:
